Prod V2/main/default/objects/Invoice_Line__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Comes From Odoo</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>