Prod V2/main/default/objects/Invoice_Line__c/fields/List_price__c.field-meta.xml
<CustomField>
    <fullName>List_price__c</fullName>
    <description>Comes From Odoo</description>
    <label>List price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>