Prod V2/main/default/objects/Invoice_Line__c/fields/Odoo_Id__c.field-meta.xml
<CustomField>
    <fullName>Odoo_Id__c</fullName>
    <externalId>true</externalId>
    <label>Odoo Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>