Prod V2/main/default/objects/Invoice_Line__c/fields/Total_price__c.field-meta.xml
<CustomField>
    <fullName>Total_price__c</fullName>
    <description>Comes From Odoo</description>
    <label>Total price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>